<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@drawable/bg_bottom_sheet"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ivClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:src="@drawable/ic_baseline_close_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/textPrimary" />

    <GridLayout
        android:id="@+id/gridUnits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:columnCount="3"
        android:rowCount="4"
        android:useDefaultMargins="true"
        app:layout_constraintTop_toBottomOf="@id/ivClose">

        <TextView
            android:id="@+id/tvUnit1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:background="@drawable/btn_bg"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/piece"
            android:textColor="@color/textTertiary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvUnit2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:background="@drawable/btn_bg"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/kg"
            android:textColor="@color/textTertiary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvUnit3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:background="@drawable/btn_bg"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/gram"
            android:textColor="@color/textTertiary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvUnit4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:background="@drawable/btn_bg"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/ml"
            android:textColor="@color/textTertiary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvUnit5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:background="@drawable/btn_bg"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/litre"
            android:textColor="@color/textTertiary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvUnit6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:background="@drawable/btn_bg"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/mm"
            android:textColor="@color/textTertiary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvUnit7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:background="@drawable/btn_bg"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/inch"
            android:textColor="@color/textTertiary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvUnit8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:background="@drawable/btn_bg"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/feet"
            android:textColor="@color/textTertiary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvUnit9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:background="@drawable/btn_bg"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/meter"
            android:textColor="@color/textTertiary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvUnit10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:background="@drawable/btn_bg"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/sq_ft"
            android:textColor="@color/textTertiary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvUnit11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:background="@drawable/btn_bg"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/sq_meter"
            android:textColor="@color/textTertiary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvUnit12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:background="@drawable/btn_bg"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/km"
            android:textColor="@color/textTertiary"
            android:textSize="20sp"
            android:textStyle="bold" />
    </GridLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent=".22"
        app:layout_constraintTop_toBottomOf="@id/gridUnits" />

</androidx.constraintlayout.widget.ConstraintLayout>