<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/backgroundPrimary"
    tools:context=".view.SellActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/appBar"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="8dp"
            app:title="Sell"
            app:titleTextColor="@color/white"
            app:layout_constraintTop_toTopOf="parent" />
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/tvDatePick"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/btn_bg"
        android:gravity="center"
        android:padding="10dp"
        android:text="23/4/21"
        android:textColor="@color/buttonPrimary"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/tvTimePick"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="@id/guideStart"
        app:layout_constraintTop_toBottomOf="@id/appBar" />

    <TextView
        android:id="@+id/tvTimePick"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:background="@drawable/btn_bg"
        android:gravity="center"
        android:padding="10dp"
        android:text="8 30 pm"
        android:textColor="@color/buttonPrimary"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/guideEnd"
        app:layout_constraintStart_toEndOf="@id/tvDatePick"
        app:layout_constraintTop_toTopOf="@id/tvDatePick"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideStart"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideEnd"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".9" />

    <TextView
        android:id="@+id/tvProductName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/enter_product_name"
        android:textColor="@color/textPrimary"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/guideStart"
        app:layout_constraintTop_toBottomOf="@id/tvDatePick" />

    <EditText
        android:id="@+id/etProductName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/editTextBg"
        android:hint="@string/ex_pizza"
        android:padding="14dp"
        android:inputType="textCapSentences"
        android:textColorHint="@color/hintText"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/guideEnd"
        app:layout_constraintStart_toStartOf="@id/guideStart"
        app:layout_constraintTop_toBottomOf="@+id/tvProductName" />

    <TextView
        android:id="@+id/tvPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/price"
        android:textColor="@color/textPrimary"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/guideStart"
        app:layout_constraintTop_toBottomOf="@id/etProductName" />

    <TextView
        android:id="@+id/tvUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/unit_of_price"
        android:textColor="@color/textPrimary"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/layoutUnit"
        app:layout_constraintTop_toBottomOf="@id/etProductName" />

    <EditText
        android:id="@+id/etPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/editTextBg"
        android:hint="@string/ex_200"
        android:padding="14dp"
        android:inputType="numberDecimal"
        android:textColorHint="@color/hintText"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@id/layoutUnit"
        app:layout_constraintStart_toStartOf="@id/guideStart"
        app:layout_constraintTop_toBottomOf="@+id/tvPrice" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutUnit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/editTextBg"
        app:layout_constraintEnd_toEndOf="@id/guideEnd"
        app:layout_constraintStart_toEndOf="@id/etPrice"
        app:layout_constraintTop_toBottomOf="@+id/tvPrice">

        <TextView
            android:id="@+id/tvUnitNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/_1"
            android:textColor="@color/textPrimary"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvAddUnit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:hint="@string/add_unit"
            android:padding="14dp"
            android:textColorHint="@color/hintText"
            android:textColor="@color/textPrimary"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvUnitNumber"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tvTotalQty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/total_quantity"
        android:textColor="@color/textPrimary"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/guideStart"
        app:layout_constraintTop_toBottomOf="@id/etPrice" />

    <EditText
        android:id="@+id/etTotalQty"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/editTextBg"
        android:hint="@string/ex_200"
        android:inputType="number"
        android:digits="0123456789"
        android:imeOptions="actionDone"
        android:text="@string/_1"
        android:padding="14dp"
        android:textColorHint="@color/hintText"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@id/layoutUnit"
        app:layout_constraintStart_toStartOf="@id/guideStart"
        app:layout_constraintTop_toBottomOf="@+id/tvTotalQty" />

    <View
        android:id="@+id/bottomDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="26dp"
        android:background="@color/thinBorder"
        app:layout_constraintTop_toBottomOf="@id/etTotalQty" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/total"
        android:textColor="@color/textPrimary"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/guideStart"
        app:layout_constraintTop_toBottomOf="@id/bottomDivider" />

    <TextView
        android:id="@+id/tvTotalPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="00.00"
        android:textColor="@color/buttonPrimary"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/guideEnd"
        app:layout_constraintStart_toStartOf="@id/layoutUnit"
        app:layout_constraintTop_toBottomOf="@id/bottomDivider" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:backgroundTint="@color/buttonPrimary"
        android:paddingStart="22dp"
        android:paddingTop="14dp"
        android:paddingEnd="22dp"
        android:paddingBottom="14dp"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideEnd"
        app:layout_constraintStart_toStartOf="@+id/guideStart"
        app:layout_constraintWidth_percent=".4" />

</androidx.constraintlayout.widget.ConstraintLayout>