<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundSecondary"
    tools:context=".view.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/buttonPrimary"
            app:layout_constraintTop_toTopOf="parent"
            app:title="Buy Sell"
            app:titleTextColor="@color/white" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/totalCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:cardBackgroundColor="@color/cardBackground"
        app:cardCornerRadius="8dp"
        app:layout_constraintTop_toBottomOf="@id/appBar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvTotalPurchase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/total_purchase"
                android:textColor="@color/textSecondary"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@id/divider"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvPurchaseAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:text="0"
                android:textColor="@color/textPrimary"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/tvTotalPurchase"
                app:layout_constraintTop_toBottomOf="@id/tvTotalPurchase" />

            <View
                android:id="@+id/divider"
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:layout_marginTop="22dp"
                android:layout_marginBottom="22dp"
                android:background="@color/textSecondary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvTotalSell"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/total_sell"
                android:textColor="@color/textSecondary"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/divider"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvSellAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="@color/textPrimary"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/tvTotalSell"
                app:layout_constraintTop_toBottomOf="@id/tvTotalSell" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/detailsCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        app:cardBackgroundColor="@color/cardBackground"
        app:layout_constraintTop_toBottomOf="@id/totalCard">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="14dp"
                android:layout_marginBottom="14dp"
                android:text="@string/details"
                android:textColor="@color/textSecondary"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvDetailAmountCard2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="10dp"
                android:text="27/3/21"
                android:textColor="@color/textPrimary"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/tvDetails"
                app:layout_constraintTop_toBottomOf="@id/tvDetails" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guide1"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".45" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guide2"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".85" />

            <TextView
                android:id="@+id/tvPurchases"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/purchases"
                android:textColor="@color/textSecondary"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/guide1"
                app:layout_constraintTop_toTopOf="@id/tvDetails" />

            <TextView
                android:id="@+id/tvPurchaseAmountCard2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="10dp"
                android:text="0"
                android:textColor="@color/textPrimary"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/tvPurchases"
                app:layout_constraintTop_toBottomOf="@id/tvPurchases" />

            <TextView
                android:id="@+id/tvSells"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sell"
                android:textColor="@color/textSecondary"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/guide2"
                app:layout_constraintTop_toTopOf="@id/tvDetails" />

            <TextView
                android:id="@+id/tvSellAmountCard2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="10dp"
                android:text="0"
                android:textColor="@color/textPrimary"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/tvSells"
                app:layout_constraintTop_toBottomOf="@id/tvSells" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/buttonsCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/cardBackground"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnPurchase"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="14dp"
                android:layout_marginEnd="18dp"
                android:layout_marginBottom="14dp"
                android:backgroundTint="@color/buttonSecondary"
                android:paddingStart="22dp"
                android:paddingTop="14dp"
                android:paddingEnd="22dp"
                android:paddingBottom="14dp"
                android:text="@string/purchases"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btnSell"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnSell"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="28dp"
                android:backgroundTint="@color/buttonTertiary"
                android:paddingStart="22dp"
                android:paddingTop="14dp"
                android:paddingEnd="22dp"
                android:paddingBottom="14dp"
                android:text="@string/sell"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/btnPurchase"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvProducts"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/buttonsCard"
        app:layout_constraintTop_toBottomOf="@id/detailsCard"
        tools:listitem="@layout/item_products" />

</androidx.constraintlayout.widget.ConstraintLayout>